frontend/test/should_pass/to_001.grg
using test_model_002;

rule to_1 {
	a : A;
	: A;
	b : typeof(a);

	replace{
		a --> b;
	}
}
